[gd_scene load_steps=19 format=2]

[ext_resource path="res://Objects/Traps/thunder_storm.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/thunder/cloud.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/thunder/thunder0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/thunder/thunder2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/thunder/thunder4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/thunder/tile000.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/thunder/tile001.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/thunder/tile002.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/thunder/tile004.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/thunder/tile003.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/thunder/tile005.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/thunder/tile006.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/thunder/tile008.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/thunder/tile007.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/thunder/tile009.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sounds/thunder.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Thunder",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -11.4785, -120.438 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -11.1297, -42.8423 )
scale = Vector2( 0.757723, 0.236753 )
frames = SubResource( 1 )
animation = "Thunder"
frame = 8

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8.55618, 1.63409 )
scale = Vector2( 6.08355, 5.5737 )
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="BAaang" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="BAaang" to="." method="_on_BAaang_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
